<resources>
    <string name="app_name">ClimbMate</string>
    <string name="action_loadfile">Load File</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_file_has_been_loaded">No file has been loaded</string>
    <string name="text_menu_routes">Routes</string>
    <string name="text_menu_multipitches">Multipitches</string>
    <string name="text_menu_ascents">Ascents</string>
    <string name="add_ascent">Add Ascent</string>
    <string name="comment_text_add_ascent">comment</string>
    <string name="date">Date</string>
    <string name="date_view">%1$04d-%2$02d-%3$02d</string>
    <string name="delete">Delete</string>
    <string name="add_route">Add Route</string>
    <string name="name">Name</string>
    <string name="text_menu_areas">Areas</string>
    <string name="text_menu_sectors">Sectors</string>
    <string name="delete_route">Delete Route</string>
    <string name="grade">Grade</string>
    <string name="comment">Comment</string>
    <string name="link">Link</string>
    <string name="country">Country</string>
    <string name="add_area">Add Area</string>
    <string name="delete_area">Delete Area</string>
    <string name="delete_sector">Delete Sector</string>
    <string name="stats">Stats</string>
    <string name="add_sector">Add Sector</string>
    <string name="edit_route">Edit Route</string>
    <string name="edit_area">Edit Area</string>
    <string name="edit_sector">Edit Sector</string>
    <string name="edit_ascent">Edit Ascent</string>
    <string name="name_identifier">Name</string>
    <string name="country_identifier">Country</string>
    <string name="date_identifier">Date</string>
    <string name="comment_identifier">Comment</string>
    <string name="kind_identifier">Kind</string>
    <string name="grade_identifier">Grade</string>
    <string name="sector_identifier">Sector</string>
    <string name="area_identifier">Area</string>
    <string name="multipitches">Multipitches</string>
    <string name="text_menu_stats">Stats</string>

    <string name="totalCount">Total: %1$d</string>
    <string name="export">Export</string>
    <string name="route_kind">Routes of kind</string>


    <string-array name="ascent_kind">
        <item>redpoint</item>
        <item>2go</item>
        <item>onsight</item>
        <item>flash</item>
        <item>repeat</item>
    </string-array>

    <string-array name="route_kind">
        <item>sport</item>
        <item>boulder</item>
    </string-array>
</resources>
