<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.ascent.AscentActivity">


    <LinearLayout
            style="@style/IdentifierLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/IdentifierText"
                android:text="@string/date_identifier" />

        <TextView
                android:id="@+id/ascentDate"
                style="@style/IdentifierValue"
                android:text="" />
    </LinearLayout>

    <LinearLayout
            style="@style/IdentifierLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/IdentifierText"
                android:text="@string/kind_identifier" />

        <TextView
                android:id="@+id/ascentKind"
                style="@style/IdentifierValue"
                android:text="" />
    </LinearLayout>

    <LinearLayout
            style="@style/IdentifierLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/IdentifierText"
                android:text="@string/comment_identifier" />

        <TextView
                android:id="@+id/comment"
                style="@style/IdentifierValue"
                android:text="" />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/routeContainer"
            style="@style/IdentifierLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/IdentifierText"
                android:text="@string/name_identifier" />

        <TextView
                android:id="@+id/routeName"
                style="@style/IdentifierValue"
                android:text="" />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        <com.example.climblogger.util.ConfirmationButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        <Button
                android:id="@+id/editAscentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_ascent" />
    </LinearLayout>
</LinearLayout>