<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.sector.SectorActivity">

    <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/IdentifierText"
                    android:layout_height="wrap_content"
                    android:text="@string/name_identifier" />

            <TextView
                    android:id="@+id/nameText"
                    style="@style/IdentifierValue"
                    android:layout_height="wrap_content"
                    android:text="" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/IdentifierText"
                    android:layout_height="wrap_content"
                    android:text="@string/area_identifier" />

            <TextView
                    android:id="@+id/areaText"
                    style="@style/IdentifierValue"
                    android:layout_height="wrap_content"
                    android:text="" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/IdentifierText"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_identifier" />

            <TextView
                    android:id="@+id/commentText"
                    style="@style/IdentifierValue"
                    android:layout_height="wrap_content"
                    android:text="" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/routesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/add_route_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_route" />

        <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_sector" />

        <com.example.climblogger.util.ConfirmationButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_sector" />
    </LinearLayout>
</LinearLayout>